-----------------------------------------------------------------------------------------
	$Id$
-----------------------------------------------------------------------------------------

2012-04-08	pwessel
	* xgrid/*:		Now works again, thanks to Lloyd Parkes!

2012-03-26	pwessel
	* psrose.c:		Option -L (no args) failed to turn off all labels.
				Option -T did not create a symmetric plot for -R0/360/...
				Fixed basemap outline for windrose diagrams.
				Added -Zu to set all radii to unity (i.e., analysis of angles only).
				Added -R0/180/... to complement -R-90/90/... for half-circle plots.
				Allow -i<one_column> to only read azimuths (radii set to unity).

2012-03-22	remko
	* ConfigUserTemplate.cmake ConfigDefaults.cmake:
				Make GMT_COMPAT the default. Switch license restrictions off by default.
	* lockfile.sh:		Removed. No longer needed.
	* gmt_init.c:		Improved GMT_COMPAT warnings.

2012-03-18	pwessel
	* *.*:			Set GNU Lesser Public License version 3 or later as the official
				license terms for GMT 5.

2012-03-17	pwessel
	* gmt_io.c:		Did not sense EOF if last record was a header.
	* spotter/libspotter.c:	A very long filename would exceed variable space in spotter_GPlates_pair().
	* xgrid/xgridedit.c:	Fixed SEGV, but the new value assigned to a node still gets corrupted.

2012-03-16	remko
	* *.*.cmake:		Renamed things like config.h.cmake to config.h.in, because they are not
				cmake files.

2012-03-15	pwessel
	* mgd77/*.c:		Introduced support for NGDC's MGD77T (tab-delimited) format
	* mgd77list.c:		Confused the meaning of -F shorthands mgd77 and all.  Now handle
				all the stored and derived quantities needed to reproduce original data.

2012-03-15	remko
	* examples/CMakeLists.txt:	Complete revision. Tests now run with "check" script.
	* scripts/*.sh test/*/*.sh:	---"---

2012-03-14	remko
	* gmtset.c:		Will write out the expansion of shorthands (like -R...) into
				.gmtcommands file when those options (GMT_SHORTHAND_OPTIONS) are used.
